<resources>
    <string name="app_name">Fitness</string>
    <string name="news">News</string>
    <string name="training">Training</string>
    <string name="history">History</string>
    <string name="schedules">Schedules</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_target">Current Target:</string>
    <string name="no_data">No Data!</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="compas_dial">compas dial</string>
    <string name="compas_hands">compas_hands</string>
    <string name="tv_running_start">Let\'s go, USERNAME!</string>
    <string name="tier">00:00:00:00</string>
    <string name="counter">0</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
</resources>