<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/nav_news">

    <fragment
        android:id="@+id/nav_news"
        android:name="com.project.fitness.ui.main.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/nav_training"
        android:name="com.project.fitness.ui.main.training.TrainingFragment"
        android:label="@string/training"
        tools:layout="@layout/fragment_training" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.project.fitness.ui.main.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.project.fitness.ui.main.schedule.ScheduleFragment"
        android:label="@string/schedules"
        tools:layout="@layout/fragment_schedule" />
</navigation>